Fix comment date in dark mode not being readable

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2139,3 +2139,7 @@ code {
 #faction_code [data-code="neutral-corp"] svg {
   fill: var(--nrdb-color--neutral);
 }
+
+#comments .comment-date {
+  color: var(--nrdb-color--text);
+}
